--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+* Prefer "vendor/gems/sprockets/lib" to "vendor/sprockets/lib" when looking for an externaled Sprockets checkout in nph-sprockets.cgi.
+
 *1.0.0* (February 17, 2009)
 
 * Initial public release.
