--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+*1.0.1* (February 19, 2009)
+
 * Change the CGI output generation environment variable name to "sprockets_generate_output_file" and use the right path in Concatenation#save_to.
 
 * Prefer "vendor/gems/sprockets/lib" to "vendor/sprockets/lib" when looking for an externaled Sprockets checkout in nph-sprockets.cgi.
