--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+* Update the sprockets-rails installation instructions to use `script/plugin`. [#7 state:resolved]
+
 * Fix Secretary#source_last_modified not to raise an exception when one of the preprocessor's source files has been moved or deleted. (Jonathan Goldman) [#10 state:resolved]
 
 * Avoid hanging when preprocessing minified source files. (Maciej Pasternacki) [#9 state:resolved]
